--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -170,7 +170,8 @@ a:focus {
 }
 
 .intro .intro-body .intro-text {
-    font-size: 18px;
+    font-size: 22px;
+	font-weight: bold;
 }
 
 @media(min-width:768px) {
@@ -326,11 +327,11 @@ a:focus {
     padding-top: 50px;
 }
 
-.download-section {
+.about-section {
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+    background: url(../img/portfolio/blur-bg.jpg) no-repeat center center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
