--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -10,6 +10,7 @@ body {
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
     background-color: #000;
+	overflow-x: hidden;
 }
 
 html {
@@ -328,10 +329,11 @@ a:focus {
 }
 
 .about-section {
+	
     width: 100%;
     padding: 50px 0;
     color: #fff;
-    background: url(../img/portfolio/blur-bg.jpg) no-repeat center center scroll;
+    background: url(../img/portfolio/bio-bg.jpg) no-repeat center center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
